--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
-name: custom_lints_template
-description: custom_lints_template is a developer tool, designed to help stop common issue and simplify repetetive tasks. It adds various warnings with quick fixes and refactoring options.
+name: boolean_lints
+description: boolean_lints is a developer tool, designed to help stop common issue and simplify repetetive tasks. It adds various warnings with quick fixes and refactoring options.
 version: 1.0.0
-repository: https://github.com/getBoolean/custom_lints_template
-issue_tracker: https://github.com/getBoolean/custom_lints_template/issues
+repository: https://github.com/getBoolean/boolean_lints
+issue_tracker: https://github.com/getBoolean/boolean_lints/issues
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
@@ -24,7 +24,7 @@ dev_dependencies:
   build_verify: ^3.1.0
   dart_mappable_builder: ">=3.0.2 <5.0.0"
   test: ^1.24.3
-# custom_lints_template:
+# boolean_lints:
 #   avoid_banned_filenames:
 #     entries:
 #      - "bad[\\.]*.dart"
