--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -18,12 +18,18 @@ boolean_lints:
     banned_code:
       severity: warning
       entries:
-        - package: example
-          id: test2
-          reason: Do not use test2 from the example package
-        - package: example
-          id: test
-          reason: Do not use test from the example package
+        - id: test2
+          class_name: BannedCodeUsage
+          reason: "BannedCodeUsage.test2 is not allowed"
+        - id: test
+          class_name: BannedCodeUsage
+          reason: "BannedCodeUsage.test is not allowed"
+        # - package: example
+        #   id: test2
+        #   reason: Do not use test2 from the example package
+        # - package: example
+        #   id: test
+        #   reason: Do not use test from the example package
         # - package: example
         #   reason: Do not use the example package
         # - id: test
