--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -18,9 +18,9 @@ boolean_lints:
     banned_code:
       severity: warning
       entries:
-        - class_name: BannedCodeUsage
-          package: example
-          reason: "BannedCodeUsage is not allowed"
+        # - class_name: BannedCodeUsage
+        #   package: example
+        #   reason: "BannedCodeUsage is not allowed"
         # - id: test2
         #   class_name: BannedCodeUsage
         #   reason: "BannedCodeUsage.test2 is not allowed"
@@ -49,8 +49,24 @@ boolean_lints:
         #   id: test2
         #   reason: "Banned code usage 2 is not allowed"
         #   package: example
-        # - class_name: BannedCodeUsage
-        #   id: test3
-        #   reason: "Banned code usage 3 is not allowed"
-        #   severity: error
-        #   package: example
+        # - id: test3
+        #   class_name: BannedCodeUsage
+        #   reason: "BannedCodeUsage.test3 is not allowed"
+        # - id: test2
+        #   class_name: BannedCodeUsage
+        #   reason: "BannedCodeUsage.test2 is not allowed"
+        # - id: test
+        #   class_name: BannedCodeUsage
+        #   reason: "BannedCodeUsage.test is not allowed"
+        - id: test3
+          class_name: BannedCodeUsage
+          package: example
+          reason: "BannedCodeUsage.test3 from the example package is not allowed"
+        - id: test2
+          class_name: BannedCodeUsage
+          package: example
+          reason: "BannedCodeUsage.test2 from the example package is not allowed"
+        - id: test
+          class_name: BannedCodeUsage
+          package: example
+          reason: "BannedCodeUsage.test from the example package is not allowed"
