Reduce duplicated code

--- a/example/analysis_options.yaml
+++ b/example/analysis_options.yaml
@@ -18,6 +18,12 @@ boolean_lints:
     banned_code:
       severity: warning
       entries:
+        # Ban global id from any package
+        - id: test2
+          reason: "test methods and variables should not be used"
+          severity: info
+
+
         # - class_name: BannedCodeUsage
         #   package: example
         #   reason: "BannedCodeUsage is not allowed"
