--- a/example/random/pubspec.yaml
+++ b/example/random/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dev_dependencies:
   custom_lint: ^0.5.3
   boolean_lints:
-    path: ../
+    path: ../../
   lints: ^2.0.0
   test: ^1.21.0
 # boolean_lints:
