--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,11 @@ jobs:
       - name: Get Packages
         run: |
           dart pub get
+          
           cd example/random
           dart pub get
           cd ../..
+
           cd example/banned_code/id_class_package
           dart pub get
           cd ../../..
@@ -47,4 +49,11 @@ jobs:
         run: dart test
 
       - name: Run Custom Lints
-        run: cd example && dart run custom_lint
+        run: |
+          cd example/banned_code/id_class_package
+          dart run custom_lint
+          cd ../../..
+          
+          cd example/random
+          dart run custom_lint
+          cd ../..
