--- a/example/banned_code/id_class_package/analysis_options.yaml
+++ b/example/banned_code/id_class_package/analysis_options.yaml
@@ -12,15 +12,19 @@ boolean_lints:
     banned_code:
       severity: warning
       entries:
-        # - id: test3
-        #   class_name: BannedCodeUsage
-        #   package: example
-        #   reason: "BannedCodeUsage.test3 from the example package is not allowed"
-        # - id: test2
-        #   class_name: BannedCodeUsage
-        #   package: example
-        #   reason: "BannedCodeUsage.test2 from the example package is not allowed"
-        # - id: test
-        #   class_name: BannedCodeUsage
-        #   package: example
-        #   reason: "BannedCodeUsage.test from the example package is not allowed"
+        - id: test4
+          class_name: BannedCodeUsage
+          package: id_class_package
+          reason: "BannedCodeUsage.test4 from the example package is not allowed"
+        - id: test3
+          class_name: BannedCodeUsage
+          package: id_class_package
+          reason: "BannedCodeUsage.test3 from the example package is not allowed"
+        - id: test2
+          class_name: BannedCodeUsage
+          package: id_class_package
+          reason: "BannedCodeUsage.test2 from the example package is not allowed"
+        - id: test
+          class_name: BannedCodeUsage
+          package: id_class_package
+          reason: "BannedCodeUsage.test from the example package is not allowed"
