--- a/example/banned_code/id_class_package/pubspec.yaml
+++ b/example/banned_code/id_class_package/pubspec.yaml
@@ -2,6 +2,7 @@ name: id_class_package
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
+publish_to: none
 
 environment:
   sdk: ^3.1.3
