--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,10 @@ on:
     branches:
       - main
       - release
-      - feature/*
-      - fix/*
-      - chore/*
+      - release/**
+      - feature/**
+      - fix/**
+      - chore/**
       - dependabot/**
 
 env:
