Fix ability to ban dart core packages

--- a/example/banned_code/id_class_package/analysis_options.yaml
+++ b/example/banned_code/id_class_package/analysis_options.yaml
@@ -14,17 +14,20 @@ boolean_lints:
       entries:
         - id: test4
           class_name: BannedCodeUsage
-          package: id_class_package
+          source: package:id_class_package
           reason: "BannedCodeUsage.test4 from the example package is not allowed"
         - id: test3
           class_name: BannedCodeUsage
-          package: id_class_package
+          source: package:id_class_package
           reason: "BannedCodeUsage.test3 from the example package is not allowed"
         - id: test2
           class_name: BannedCodeUsage
-          package: id_class_package
+          source: package:id_class_package
           reason: "BannedCodeUsage.test2 from the example package is not allowed"
         - id: test
           class_name: BannedCodeUsage
-          package: id_class_package
+          source: package:id_class_package
           reason: "BannedCodeUsage.test from the example package is not allowed"
+        - class_name: UnmodifiableListView
+          source: dart:collection
+          reason: "UnmodifiableListView from dart:collection is not allowed"
