--- a/example/banned_code/id_class_package/analysis_options.yaml
+++ b/example/banned_code/id_class_package/analysis_options.yaml
@@ -31,7 +31,7 @@ boolean_lints:
         - class_name: UnmodifiableListView
           source: dart:collection
           reason: "UnmodifiableListView from dart:collection is not allowed"
-        # - class_name: UnmodifiableListView
-        #   id: first
-        #   source: dart:collection
-        #   reason: "UnmodifiableListView from dart:collection is not allowed"
+        - class_name: UnmodifiableListView
+          id: first
+          source: dart:collection
+          reason: "UnmodifiableListView from dart:collection is not allowed"
