add banned id/source example

--- a/example/banned_code/id_source/pubspec.yaml
+++ b/example/banned_code/id_source/pubspec.yaml
@@ -1,4 +1,4 @@
-name: id_class
+name: id_source
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
 publish_to: none
