banned_code: Support linting library file

--- a/example/banned_code/source_ban/analysis_options.yaml
+++ b/example/banned_code/source_ban/analysis_options.yaml
@@ -14,3 +14,5 @@ boolean_lints:
       entries:
         - source: dart:collection
           reason: "dart:collection should not be used"
+        - source: package:source_ban/src/banned_library.dart
+          reason: "src/banned_library.dart should not be used anymore"
