--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: solid_lints_example
+name: boolean_lints_example
 description: A starting point for Dart libraries or applications.
 publish_to: none
 
